# DeepRoots

./: .gitignore  README.md  pyproject.toml  setup.py
cases/: CarPricePredictor.py  EmailClassifier.py
cases/ASimpleNetwork/: SimpleNetworkExample.py
cases/CarPricePredictor/: CarPricePredictor.py  carprice_data.csv
cases/EmailClassifier/: EmailClassifier.py  Email_train.json  email_classifier.json
deeproots/: NN.py  NNVisualizer.py
deeproots/DataTypes/: Mat.py  Scalar.py
deeproots/Dataloaders/: Dataloader.py
deeproots/Functional/: Softmax.py  Tanh.py
deeproots/Layers/: Layer.py  LayerScalar.py  LinearLayer.py
deeproots/LossFunctions/: BinaryCrossEntropy.py  MSELoss.py  NNCrossEntropy.py  SoftmaxCrossEntropy.py
deeproots/Neurons/: Neuron.py  ReLU.py  Sigmoid.py  Softmax.py
deeproots/Optimizer/: GradientDescent.py  Optimizer.py
deeproots/Optimizers/: GradientDescent.py  Optimizer.py
deeproots/Utils/: OneHotEncoding.py  TrainTestSplit.py
deeproots/Viz/: Viz.py
deeproots/dataloaders/: CSVLoader.py
